{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 104,
  "lineage": "21c28e41-46f4-c05b-862c-fb1266acd8d3",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:227022022835:loadbalancer/app/mystic-falls-alb/5552ba6847e0373e",
            "arn_suffix": "app/mystic-falls-alb/5552ba6847e0373e",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "mystic-falls-alb-669380128.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:227022022835:loadbalancer/app/mystic-falls-alb/5552ba6847e0373e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mystic-falls-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0af7fe8ffc4da439d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-002f0c9362ede6946"
              },
              {
                "subnet_id": "subnet-081ea771d5dcb6d6c"
              }
            ],
            "subnets": [
              "subnet-002f0c9362ede6946",
              "subnet-081ea771d5dcb6d6c"
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "mystic-falls-alb",
              "Project": "mystic-falls"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "mystic-falls-alb",
              "Project": "mystic-falls"
            },
            "vpc_id": "vpc-014416022cea4989a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.mystic_falls_subnets.aws_subnet.public",
            "module.mystic_falls_vpc.aws_vpc.this",
            "module.security_groups.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:227022022835:listener/app/mystic-falls-alb/5552ba6847e0373e/cd00901978805034",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:227022022835:targetgroup/mystic-falls-alb-tg/815f13eb98b4ee8f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:227022022835:listener/app/mystic-falls-alb/5552ba6847e0373e/cd00901978805034",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:227022022835:loadbalancer/app/mystic-falls-alb/5552ba6847e0373e",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.web",
            "module.mystic_falls_subnets.aws_subnet.public",
            "module.mystic_falls_vpc.aws_vpc.this",
            "module.security_groups.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:227022022835:targetgroup/mystic-falls-alb-tg/815f13eb98b4ee8f",
            "arn_suffix": "targetgroup/mystic-falls-alb-tg/815f13eb98b4ee8f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:227022022835:targetgroup/mystic-falls-alb-tg/815f13eb98b4ee8f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:227022022835:loadbalancer/app/mystic-falls-alb/5552ba6847e0373e"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "mystic-falls-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "mystic-falls-alb-tg",
              "Project": "mystic-falls"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "mystic-falls-alb-tg",
              "Project": "mystic-falls"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-014416022cea4989a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.mystic_falls_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:227022022835:targetgroup/mystic-falls-alb-tg/815f13eb98b4ee8f-2026031816350033640000000e",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:227022022835:targetgroup/mystic-falls-alb-tg/815f13eb98b4ee8f",
            "target_id": "i-076ce25addbf43b32"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb_target_group.web",
            "module.ec2.aws_instance.web",
            "module.mystic_falls_subnets.aws_subnet.private",
            "module.mystic_falls_vpc.aws_vpc.this",
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.bastion",
            "module.security_groups.aws_security_group.web"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:227022022835:targetgroup/mystic-falls-alb-tg/815f13eb98b4ee8f-2026031816345996960000000d",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:227022022835:targetgroup/mystic-falls-alb-tg/815f13eb98b4ee8f",
            "target_id": "i-0606dac5e09152a0f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb_target_group.web",
            "module.ec2.aws_instance.web",
            "module.mystic_falls_subnets.aws_subnet.private",
            "module.mystic_falls_vpc.aws_vpc.this",
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.bastion",
            "module.security_groups.aws_security_group.web"
          ]
        }
      ]
    },
    {
      "module": "module.clock_tower_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-075a156f1500285e1",
            "arn": "arn:aws:ec2:us-east-2:227022022835:instance/i-089b671b5e3cab884",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-089b671b5e3cab884",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "my-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03749f1b6c28728eb",
            "private_dns": "ip-192-168-0-12.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.12",
            "public_dns": "ec2-18-188-21-0.us-east-2.compute.amazonaws.com",
            "public_ip": "18.188.21.0",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05ce1b3269fea49a9",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f7af12af86815ad9",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "ct-server-1",
              "Project": "mystic-falls",
              "Role": "web"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "ct-server-1",
              "Project": "mystic-falls",
              "Role": "web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03344d84b2f3e0731"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.clock_tower_subnets.aws_subnet.private",
            "module.clock_tower_subnets.aws_subnet.public",
            "module.clock_tower_vpc.aws_vpc.this",
            "module.security_groups.aws_security_group.clock_tower"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-075a156f1500285e1",
            "arn": "arn:aws:ec2:us-east-2:227022022835:instance/i-03c650d46823003ed",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03c650d46823003ed",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "my-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05b0d6b743cbf1795",
            "private_dns": "ip-192-168-0-60.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.60",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-018807f176d7c9444",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04ff39b5d528dc37c",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "ct-server-2",
              "Project": "mystic-falls",
              "Role": "web"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "ct-server-2",
              "Project": "mystic-falls",
              "Role": "web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03344d84b2f3e0731"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.clock_tower_subnets.aws_subnet.private",
            "module.clock_tower_subnets.aws_subnet.public",
            "module.clock_tower_vpc.aws_vpc.this",
            "module.security_groups.aws_security_group.clock_tower"
          ]
        }
      ]
    },
    {
      "module": "module.clock_tower_subnets",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f4aa2c4ce43044f2",
            "arn": "arn:aws:ec2:us-east-2:227022022835:elastic-ip/eipalloc-0f4aa2c4ce43044f2",
            "association_id": "eipassoc-0f01d837afa428b57",
            "domain": "vpc",
            "id": "eipalloc-0f4aa2c4ce43044f2",
            "network_border_group": "us-east-2",
            "network_interface": "eni-09a36ba18978e3a15",
            "private_dns": "ip-192-168-0-30.us-east-2.compute.internal",
            "private_ip": "192.168.0.30",
            "public_dns": "ec2-16-58-147-255.us-east-2.compute.amazonaws.com",
            "public_ip": "16.58.147.255",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "nat-eip",
              "Project": "mystic-falls"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "nat-eip",
              "Project": "mystic-falls"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.clock_tower_subnets",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f4aa2c4ce43044f2",
            "association_id": "eipassoc-0f01d837afa428b57",
            "connectivity_type": "public",
            "id": "nat-017079891d236bb2c",
            "network_interface_id": "eni-09a36ba18978e3a15",
            "private_ip": "192.168.0.30",
            "public_ip": "16.58.147.255",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f7af12af86815ad9",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "nat-gw",
              "Project": "mystic-falls"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "nat-gw",
              "Project": "mystic-falls"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.clock_tower_subnets.aws_eip.nat",
            "module.clock_tower_subnets.aws_subnet.public",
            "module.clock_tower_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.clock_tower_subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:227022022835:route-table/rtb-014db29973dd71e16",
            "id": "rtb-014db29973dd71e16",
            "owner_id": "227022022835",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-017079891d236bb2c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "private-rt",
              "Project": "mystic-falls"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "private-rt",
              "Project": "mystic-falls"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a16c432cb0ca27f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.clock_tower_subnets.aws_eip.nat",
            "module.clock_tower_subnets.aws_nat_gateway.this",
            "module.clock_tower_subnets.aws_subnet.public",
            "module.clock_tower_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.clock_tower_subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:227022022835:route-table/rtb-0b6217646decb062a",
            "id": "rtb-0b6217646decb062a",
            "owner_id": "227022022835",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00865eb95fcd6a0e0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "public-rt",
              "Project": "mystic-falls"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "public-rt",
              "Project": "mystic-falls"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a16c432cb0ca27f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.clock_tower_vpc.aws_internet_gateway.this",
            "module.clock_tower_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.clock_tower_subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2ba95c2dcc87a52",
            "route_table_id": "rtb-014db29973dd71e16",
            "subnet_id": "subnet-04ff39b5d528dc37c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.clock_tower_subnets.aws_eip.nat",
            "module.clock_tower_subnets.aws_nat_gateway.this",
            "module.clock_tower_subnets.aws_route_table.private",
            "module.clock_tower_subnets.aws_subnet.private",
            "module.clock_tower_subnets.aws_subnet.public",
            "module.clock_tower_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.clock_tower_subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac17ffefe52ee6a2",
            "route_table_id": "rtb-0b6217646decb062a",
            "subnet_id": "subnet-0f7af12af86815ad9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.clock_tower_subnets.aws_route_table.public",
            "module.clock_tower_subnets.aws_subnet.public",
            "module.clock_tower_vpc.aws_internet_gateway.this",
            "module.clock_tower_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.clock_tower_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:227022022835:subnet/subnet-04ff39b5d528dc37c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.0.32/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ff39b5d528dc37c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "227022022835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "private-ct",
              "Project": "mystic-falls",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "private-ct",
              "Project": "mystic-falls",
              "Tier": "private"
            },
            "vpc_id": "vpc-04a16c432cb0ca27f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.clock_tower_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.clock_tower_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:227022022835:subnet/subnet-0f7af12af86815ad9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.0.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7af12af86815ad9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "227022022835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "public-ct",
              "Project": "mystic-falls",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "public-ct",
              "Project": "mystic-falls",
              "Tier": "public"
            },
            "vpc_id": "vpc-04a16c432cb0ca27f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.clock_tower_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.clock_tower_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:227022022835:internet-gateway/igw-00865eb95fcd6a0e0",
            "id": "igw-00865eb95fcd6a0e0",
            "owner_id": "227022022835",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "clock-tower-igw",
              "Project": "mystic-falls"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "clock-tower-igw",
              "Project": "mystic-falls"
            },
            "vpc_id": "vpc-04a16c432cb0ca27f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.clock_tower_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.clock_tower_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:227022022835:vpc/vpc-04a16c432cb0ca27f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/24",
            "default_network_acl_id": "acl-06c6e7d5802690f56",
            "default_route_table_id": "rtb-0d7fc00445a94ce6d",
            "default_security_group_id": "sg-08abc489e23f6bfed",
            "dhcp_options_id": "dopt-0434db4393cb29e0c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04a16c432cb0ca27f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d7fc00445a94ce6d",
            "owner_id": "227022022835",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "clock-tower",
              "Project": "mystic-falls"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "clock-tower",
              "Project": "mystic-falls"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc6cf99992956a4a",
            "arn": "arn:aws:ec2:us-east-1:227022022835:instance/i-01a036495bdacff8f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01a036495bdacff8f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "my-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-000444ff2ddbc15c2",
            "private_dns": "ip-10-0-0-10.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.10",
            "public_dns": "ec2-98-80-169-109.compute-1.amazonaws.com",
            "public_ip": "98.80.169.109",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0525941478b38e85f",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-002f0c9362ede6946",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "bastion-host",
              "Project": "mystic-falls",
              "Role": "bastion"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "bastion-host",
              "Project": "mystic-falls",
              "Role": "bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0567e2899c119d1e8"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.mystic_falls_subnets.aws_subnet.public",
            "module.mystic_falls_vpc.aws_vpc.this",
            "module.security_groups.aws_security_group.bastion"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc6cf99992956a4a",
            "arn": "arn:aws:ec2:us-east-1:227022022835:instance/i-076ce25addbf43b32",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-076ce25addbf43b32",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "my-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dc829d739faca127",
            "private_dns": "ip-10-0-0-88.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.88",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0350c282a7d2030a7",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a92d8ba898525da2",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "web-server-1",
              "Project": "mystic-falls",
              "Role": "web"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "web-server-1",
              "Project": "mystic-falls",
              "Role": "web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0615213bea581e08d"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.mystic_falls_subnets.aws_subnet.private",
            "module.mystic_falls_vpc.aws_vpc.this",
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.bastion",
            "module.security_groups.aws_security_group.web"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc6cf99992956a4a",
            "arn": "arn:aws:ec2:us-east-1:227022022835:instance/i-0606dac5e09152a0f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0606dac5e09152a0f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "my-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dddb3a3e64aeb741",
            "private_dns": "ip-10-0-0-119.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.119",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0055931084968fef6",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0221650f85a9cd4ed",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "web-server-2",
              "Project": "mystic-falls",
              "Role": "web"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "web-server-2",
              "Project": "mystic-falls",
              "Role": "web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0615213bea581e08d"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.mystic_falls_subnets.aws_subnet.private",
            "module.mystic_falls_vpc.aws_vpc.this",
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.bastion",
            "module.security_groups.aws_security_group.web"
          ]
        }
      ]
    },
    {
      "module": "module.mystic_falls_subnets",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ecadf4a85e2b1552",
            "arn": "arn:aws:ec2:us-east-1:227022022835:elastic-ip/eipalloc-0ecadf4a85e2b1552",
            "association_id": "eipassoc-0c3ce299b88de24f4",
            "domain": "vpc",
            "id": "eipalloc-0ecadf4a85e2b1552",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0c097e4f3fb043698",
            "private_dns": "ip-10-0-0-13.ec2.internal",
            "private_ip": "10.0.0.13",
            "public_dns": "ec2-34-206-163-65.compute-1.amazonaws.com",
            "public_ip": "34.206.163.65",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "nat-eip",
              "Project": "mystic-falls"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "nat-eip",
              "Project": "mystic-falls"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.mystic_falls_subnets",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ecadf4a85e2b1552",
            "association_id": "eipassoc-0c3ce299b88de24f4",
            "connectivity_type": "public",
            "id": "nat-05977abfca92e6392",
            "network_interface_id": "eni-0c097e4f3fb043698",
            "private_ip": "10.0.0.13",
            "public_ip": "34.206.163.65",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-002f0c9362ede6946",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "nat-gw",
              "Project": "mystic-falls"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "nat-gw",
              "Project": "mystic-falls"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.mystic_falls_subnets.aws_eip.nat",
            "module.mystic_falls_subnets.aws_subnet.public",
            "module.mystic_falls_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.mystic_falls_subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:227022022835:route-table/rtb-023eff973e4aaa438",
            "id": "rtb-023eff973e4aaa438",
            "owner_id": "227022022835",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.0.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-00245d4c9141e66c8"
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "db-rt",
              "Project": "mystic-falls"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "db-rt",
              "Project": "mystic-falls"
            },
            "timeouts": null,
            "vpc_id": "vpc-014416022cea4989a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.mystic_falls_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.mystic_falls_subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:227022022835:route-table/rtb-09cb0e5c1e1484ffe",
            "id": "rtb-09cb0e5c1e1484ffe",
            "owner_id": "227022022835",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05977abfca92e6392",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "private-rt",
              "Project": "mystic-falls"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "private-rt",
              "Project": "mystic-falls"
            },
            "timeouts": null,
            "vpc_id": "vpc-014416022cea4989a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.mystic_falls_subnets.aws_eip.nat",
            "module.mystic_falls_subnets.aws_nat_gateway.this",
            "module.mystic_falls_subnets.aws_subnet.public",
            "module.mystic_falls_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.mystic_falls_subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:227022022835:route-table/rtb-091a08f8bce615053",
            "id": "rtb-091a08f8bce615053",
            "owner_id": "227022022835",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0baff00c0ceeac2b8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "public-rt",
              "Project": "mystic-falls"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "public-rt",
              "Project": "mystic-falls"
            },
            "timeouts": null,
            "vpc_id": "vpc-014416022cea4989a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.mystic_falls_vpc.aws_internet_gateway.this",
            "module.mystic_falls_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.mystic_falls_subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cbefa6d06800c627",
            "route_table_id": "rtb-023eff973e4aaa438",
            "subnet_id": "subnet-02122ca6b95481392"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.mystic_falls_subnets.aws_route_table.db",
            "module.mystic_falls_subnets.aws_subnet.db",
            "module.mystic_falls_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0854f45c037dbf452",
            "route_table_id": "rtb-023eff973e4aaa438",
            "subnet_id": "subnet-0df1baa5f37c7c627"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.mystic_falls_subnets.aws_route_table.db",
            "module.mystic_falls_subnets.aws_subnet.db",
            "module.mystic_falls_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.mystic_falls_subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be30becfd1924507",
            "route_table_id": "rtb-09cb0e5c1e1484ffe",
            "subnet_id": "subnet-0a92d8ba898525da2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.mystic_falls_subnets.aws_eip.nat",
            "module.mystic_falls_subnets.aws_nat_gateway.this",
            "module.mystic_falls_subnets.aws_route_table.private",
            "module.mystic_falls_subnets.aws_subnet.private",
            "module.mystic_falls_subnets.aws_subnet.public",
            "module.mystic_falls_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc7a19b44dcecf61",
            "route_table_id": "rtb-09cb0e5c1e1484ffe",
            "subnet_id": "subnet-0221650f85a9cd4ed"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.mystic_falls_subnets.aws_eip.nat",
            "module.mystic_falls_subnets.aws_nat_gateway.this",
            "module.mystic_falls_subnets.aws_route_table.private",
            "module.mystic_falls_subnets.aws_subnet.private",
            "module.mystic_falls_subnets.aws_subnet.public",
            "module.mystic_falls_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.mystic_falls_subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051ca406921c2647e",
            "route_table_id": "rtb-091a08f8bce615053",
            "subnet_id": "subnet-002f0c9362ede6946"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.mystic_falls_subnets.aws_route_table.public",
            "module.mystic_falls_subnets.aws_subnet.public",
            "module.mystic_falls_vpc.aws_internet_gateway.this",
            "module.mystic_falls_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b72a730cb97accc1",
            "route_table_id": "rtb-091a08f8bce615053",
            "subnet_id": "subnet-081ea771d5dcb6d6c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.mystic_falls_subnets.aws_route_table.public",
            "module.mystic_falls_subnets.aws_subnet.public",
            "module.mystic_falls_vpc.aws_internet_gateway.this",
            "module.mystic_falls_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.mystic_falls_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:227022022835:subnet/subnet-02122ca6b95481392",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.128/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02122ca6b95481392",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "227022022835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "private-db-1a",
              "Project": "mystic-falls",
              "Tier": "db"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "private-db-1a",
              "Project": "mystic-falls",
              "Tier": "db"
            },
            "vpc_id": "vpc-014416022cea4989a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.mystic_falls_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:227022022835:subnet/subnet-0df1baa5f37c7c627",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.160/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df1baa5f37c7c627",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "227022022835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "private-db-1b",
              "Project": "mystic-falls",
              "Tier": "db"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "private-db-1b",
              "Project": "mystic-falls",
              "Tier": "db"
            },
            "vpc_id": "vpc-014416022cea4989a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.mystic_falls_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.mystic_falls_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:227022022835:subnet/subnet-0a92d8ba898525da2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.64/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a92d8ba898525da2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "227022022835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "private-1a",
              "Project": "mystic-falls",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "private-1a",
              "Project": "mystic-falls",
              "Tier": "private"
            },
            "vpc_id": "vpc-014416022cea4989a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.mystic_falls_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:227022022835:subnet/subnet-0221650f85a9cd4ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.96/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0221650f85a9cd4ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "227022022835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "private-1b",
              "Project": "mystic-falls",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "private-1b",
              "Project": "mystic-falls",
              "Tier": "private"
            },
            "vpc_id": "vpc-014416022cea4989a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.mystic_falls_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.mystic_falls_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:227022022835:subnet/subnet-002f0c9362ede6946",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002f0c9362ede6946",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "227022022835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "public-1a",
              "Project": "mystic-falls",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "public-1a",
              "Project": "mystic-falls",
              "Tier": "public"
            },
            "vpc_id": "vpc-014416022cea4989a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.mystic_falls_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:227022022835:subnet/subnet-081ea771d5dcb6d6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.32/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081ea771d5dcb6d6c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "227022022835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "public-1b",
              "Project": "mystic-falls",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "public-1b",
              "Project": "mystic-falls",
              "Tier": "public"
            },
            "vpc_id": "vpc-014416022cea4989a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.mystic_falls_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.mystic_falls_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:227022022835:internet-gateway/igw-0baff00c0ceeac2b8",
            "id": "igw-0baff00c0ceeac2b8",
            "owner_id": "227022022835",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "mystic-falls-igw",
              "Project": "mystic-falls"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "mystic-falls-igw",
              "Project": "mystic-falls"
            },
            "vpc_id": "vpc-014416022cea4989a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.mystic_falls_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.mystic_falls_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:227022022835:vpc/vpc-014416022cea4989a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-04a07f762817edcd2",
            "default_route_table_id": "rtb-09390ced5f16f6115",
            "default_security_group_id": "sg-0418e39009fa7acf3",
            "dhcp_options_id": "dopt-0debb4c19f9da69ac",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-014416022cea4989a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09390ced5f16f6115",
            "owner_id": "227022022835",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "mystic-falls",
              "Project": "mystic-falls"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "mystic-falls",
              "Project": "mystic-falls"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:227022022835:security-group/sg-0af7fe8ffc4da439d",
            "description": "Allow HTTP and HTTPS from internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0af7fe8ffc4da439d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "227022022835",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "alb-sg",
              "Project": "mystic-falls"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "alb-sg",
              "Project": "mystic-falls"
            },
            "timeouts": null,
            "vpc_id": "vpc-014416022cea4989a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.mystic_falls_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:227022022835:security-group/sg-0567e2899c119d1e8",
            "description": "Allow SSH from admin IP only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0567e2899c119d1e8",
            "ingress": [
              {
                "cidr_blocks": [
                  "49.37.169.117/32"
                ],
                "description": "SSH from admin",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "227022022835",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "bastion-sg",
              "Project": "mystic-falls"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "bastion-sg",
              "Project": "mystic-falls"
            },
            "timeouts": null,
            "vpc_id": "vpc-014416022cea4989a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.mystic_falls_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "clock_tower",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:227022022835:security-group/sg-03344d84b2f3e0731",
            "description": "Allow traffic from Mystic Falls via peering",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03344d84b2f3e0731",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/24"
                ],
                "description": "All traffic from peering",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/24"
                ],
                "description": "SSH from Mystic Falls",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "clock-tower-sg",
            "name_prefix": "",
            "owner_id": "227022022835",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "clock-tower-sg",
              "Project": "mystic-falls"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "clock-tower-sg",
              "Project": "mystic-falls"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a16c432cb0ca27f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.clock_tower_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:227022022835:security-group/sg-0d9d9352ef0a451c5",
            "description": "Allow MySQL from web servers only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d9d9352ef0a451c5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from web servers",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0615213bea581e08d"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "227022022835",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "rds-sg",
              "Project": "mystic-falls"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "rds-sg",
              "Project": "mystic-falls"
            },
            "timeouts": null,
            "vpc_id": "vpc-014416022cea4989a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.mystic_falls_vpc.aws_vpc.this",
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.bastion",
            "module.security_groups.aws_security_group.web"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:227022022835:security-group/sg-0615213bea581e08d",
            "description": "Allow HTTP from ALB and SSH from Bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0615213bea581e08d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0af7fe8ffc4da439d"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "SSH from Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0567e2899c119d1e8"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web-sg",
            "name_prefix": "",
            "owner_id": "227022022835",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "web-sg",
              "Project": "mystic-falls"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "web-sg",
              "Project": "mystic-falls"
            },
            "timeouts": null,
            "vpc_id": "vpc-014416022cea4989a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.mystic_falls_vpc.aws_vpc.this",
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.bastion"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_peering",
      "mode": "managed",
      "type": "aws_route",
      "name": "accepter_to_requester",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b6217646decb062a3482919157",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b6217646decb062a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-00245d4c9141e66c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.clock_tower_subnets.aws_eip.nat",
            "module.clock_tower_subnets.aws_nat_gateway.this",
            "module.clock_tower_subnets.aws_route_table.db",
            "module.clock_tower_subnets.aws_route_table.private",
            "module.clock_tower_subnets.aws_route_table.public",
            "module.clock_tower_subnets.aws_subnet.public",
            "module.clock_tower_vpc.aws_internet_gateway.this",
            "module.clock_tower_vpc.aws_vpc.this",
            "module.mystic_falls_vpc.aws_vpc.this",
            "module.vpc_peering.aws_vpc_peering_connection.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-014db29973dd71e163482919157",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-014db29973dd71e16",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-00245d4c9141e66c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.clock_tower_subnets.aws_eip.nat",
            "module.clock_tower_subnets.aws_nat_gateway.this",
            "module.clock_tower_subnets.aws_route_table.db",
            "module.clock_tower_subnets.aws_route_table.private",
            "module.clock_tower_subnets.aws_route_table.public",
            "module.clock_tower_subnets.aws_subnet.public",
            "module.clock_tower_vpc.aws_internet_gateway.this",
            "module.clock_tower_vpc.aws_vpc.this",
            "module.mystic_falls_vpc.aws_vpc.this",
            "module.vpc_peering.aws_vpc_peering_connection.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_peering",
      "mode": "managed",
      "type": "aws_route",
      "name": "requester_to_accepter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "192.168.0.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-091a08f8bce615053766747311",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-091a08f8bce615053",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-00245d4c9141e66c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.clock_tower_vpc.aws_vpc.this",
            "module.mystic_falls_subnets.aws_eip.nat",
            "module.mystic_falls_subnets.aws_nat_gateway.this",
            "module.mystic_falls_subnets.aws_route_table.db",
            "module.mystic_falls_subnets.aws_route_table.private",
            "module.mystic_falls_subnets.aws_route_table.public",
            "module.mystic_falls_subnets.aws_subnet.public",
            "module.mystic_falls_vpc.aws_internet_gateway.this",
            "module.mystic_falls_vpc.aws_vpc.this",
            "module.vpc_peering.aws_vpc_peering_connection.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "192.168.0.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09cb0e5c1e1484ffe766747311",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09cb0e5c1e1484ffe",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-00245d4c9141e66c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.clock_tower_vpc.aws_vpc.this",
            "module.mystic_falls_subnets.aws_eip.nat",
            "module.mystic_falls_subnets.aws_nat_gateway.this",
            "module.mystic_falls_subnets.aws_route_table.db",
            "module.mystic_falls_subnets.aws_route_table.private",
            "module.mystic_falls_subnets.aws_route_table.public",
            "module.mystic_falls_subnets.aws_subnet.public",
            "module.mystic_falls_vpc.aws_internet_gateway.this",
            "module.mystic_falls_vpc.aws_vpc.this",
            "module.vpc_peering.aws_vpc_peering_connection.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "192.168.0.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-023eff973e4aaa438766747311",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-023eff973e4aaa438",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-00245d4c9141e66c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.clock_tower_vpc.aws_vpc.this",
            "module.mystic_falls_subnets.aws_eip.nat",
            "module.mystic_falls_subnets.aws_nat_gateway.this",
            "module.mystic_falls_subnets.aws_route_table.db",
            "module.mystic_falls_subnets.aws_route_table.private",
            "module.mystic_falls_subnets.aws_route_table.public",
            "module.mystic_falls_subnets.aws_subnet.public",
            "module.mystic_falls_vpc.aws_internet_gateway.this",
            "module.mystic_falls_vpc.aws_vpc.this",
            "module.vpc_peering.aws_vpc_peering_connection.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_peering",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": false,
            "id": "pcx-00245d4c9141e66c8",
            "peer_owner_id": "227022022835",
            "peer_region": "us-east-2",
            "peer_vpc_id": "vpc-04a16c432cb0ca27f",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "mystic-falls-to-clock-tower"
            },
            "tags_all": {
              "Name": "mystic-falls-to-clock-tower"
            },
            "vpc_id": "vpc-014416022cea4989a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.clock_tower_vpc.aws_vpc.this",
            "module.mystic_falls_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_peering",
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-00245d4c9141e66c8",
            "peer_owner_id": "227022022835",
            "peer_region": "us-east-2",
            "peer_vpc_id": "vpc-04a16c432cb0ca27f",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "clock-tower-to-mystic-falls"
            },
            "tags_all": {
              "Name": "clock-tower-to-mystic-falls"
            },
            "vpc_id": "vpc-014416022cea4989a",
            "vpc_peering_connection_id": "pcx-00245d4c9141e66c8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.clock_tower_vpc.aws_vpc.this",
            "module.mystic_falls_vpc.aws_vpc.this",
            "module.vpc_peering.aws_vpc_peering_connection.this"
          ]
        }
      ]
    }
  ]
}